<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.activities.MainActivity">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_marginBottom="150dp"
        android:contentDescription="@string/cd_logo_app"
        android:scaleType="centerInside"
        android:src="@drawable/app_icon_with_text"
        app:layout_constraintBottom_toTopOf="@+id/tv_version"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_camera"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="64dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/blue"
        android:text="@string/btn_start_camera"
        app:layout_constraintEnd_toEndOf="@id/iv_logo"
        app:layout_constraintStart_toStartOf="@id/iv_logo"
        app:layout_constraintTop_toBottomOf="@id/iv_logo" />

    <Button
        android:id="@+id/btn_gallery"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="64dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/blue"
        android:text="@string/btn_launch_gallery"
        app:layout_constraintEnd_toEndOf="@id/btn_camera"
        app:layout_constraintStart_toStartOf="@id/btn_camera"
        app:layout_constraintTop_toBottomOf="@id/btn_camera" />

    <TextView
        android:id="@+id/tv_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:text="@string/app_version"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>